# rustmc

./: .gitignore  404.html  Cargo.toml  LICENSE  NEXT.md  README.md  hierarchical.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
docs/: CNAME  getting-started.md  index.md  reference.md
docs/examples/: batch-inference.md  hierarchical.ipynb  hierarchical.md  high-dimensional.md  linear-regression.ipynb  linear-regression.md
examples/: arviz_example.py  batch_10k_skus.py  benchmark_multivariate.py  benchmark_vs_pymc.py  ci_debug.csv  compare_with_pymc.py  hierarchical_example.py  hierarchical_forecast.py  large_linear_regression.py  linear-regression.ipynb  simple_example.py
examples/batch-inference/: index.html
examples/hierarchical/: index.html
examples/high-dimensional/: index.html
examples/linear-regression/: index.html
getting-started/: index.html
python_bindings/: Cargo.toml
python_bindings/src/: lib.rs
reference/: index.html
rust_core/: Cargo.toml
rust_core/src/: autodiff.rs  diagnostics.rs  distributions.rs  graph.rs  hmc.rs  lib.rs  nuts.rs  progress.rs  sampler.rs
scripts/: verify_version.sh
search/: search_index.json
