[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustmc"
version = "0.1.0"
description = "High-performance Bayesian inference engine written in Rust"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.maturin]
manifest-path = "python_bindings/Cargo.toml"
features = ["pyo3/extension-module"]
