[package]
name = "rustmc"
version = "0.3.0"
edition = "2021"
license = "MIT"
license-file = "../LICENSE"

[lib]
name = "rustmc"
crate-type = ["cdylib"]

[dependencies]
rustmc_core = { path = "../rust_core" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ndarray = "0.16"
