[package]
name = "rustmc_core"
version = "0.7.0"
edition = "2021"
description = "High-performance probabilistic inference engine"
license = "MIT"
repository = "https://github.com/tbosier/rustmc"
documentation = "https://github.com/tbosier/rustmc#readme"
readme = "../README.md"

[dependencies]
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
ndarray = "0.16"
faer = { version = "0.19", features = ["rayon"] }
